--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-storybook": "^0.6.13",
+    "prettier": "3.0.0",
     "storybook": "^7.1.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
