--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "files": [
     "dist"
   ],
+  "devEngines": {
+    "node": ">=18.16 <19",
+    "npm": ">=9.5 <10"
+  },
   "main": "./dist/hh-content-editor.umd.cjs",
   "module": "./dist/hh-content-editor.js",
   "exports": {
@@ -23,10 +27,10 @@
     "build-storybook": "storybook build",
     "prepare": "husky install"
   },
-  "dependencies": {
+  "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.0.7"
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.1.1",
